# mac-echo

./: .gitignore  CLAUDE.md  README.md  hello.py  pyproject.toml  requirements.txt  setup.py
examples/: .env-sample  agent_usage_example.py  llm_sentencizer_demo.py  test_agent_pipeline.py  test_chat_with_context.py  test_complete_integration.py  test_cosyvoice_integration.py  test_cosyvoice_simple.py  test_kokoro_simple.py  test_mlx_llm_simple.py  test_streaming_pipeline.py  test_tts_factory.py
src/macecho/: agent.py  config.py
src/macecho/asr/: base.py
src/macecho/asr/sencevoice/: model.py
src/macecho/device/: device.py
src/macecho/llm/: __init__.py  base.py  context_manager.py  factory.py  mlx_qwen.py  openai_llm.py  prompt.py
src/macecho/message/: __init__.py  message.py
src/macecho/sentencizer/: __init__.py  base.py  llm_sentencizer.py  multilang_sentencizer.py  simple_sentencizer.py
src/macecho/tts/: __init__.py  base.py  cosyvoice.py  f5.py  factory.py  kokoro.py  koroto.py
src/macecho/utils/: queue.py
src/macecho/vad/: interface.py  vad.py
tests/: test_audio_recorder.py  test_vad_processor.py
