[project]
name = "mac-echo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pyaudio>=0.2.11",
    "soundfile>=0.10.0",
    "librosa>=0.9.0",
    "torch>=1.9.0",
    "transformers>=4.20.0",
    "onnxruntime>=1.12.0",
    "mlx>=0.12.0",
    "funasr>=1.0.0",
    "tqdm>=4.64.0",
    "matplotlib>=3.5.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0"
]
